# Notes2Notion

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.dokploy.yml  docker-compose.yml  pyproject.toml
admin_tools/: README.md  __init__.py  license_manager.py  pyproject.toml
backend/: .gitkeep  Dockerfile  alembic.ini  app.py  models.py  oauth.py  requirements.txt
backend/alembic/: README  env.py
backend/alembic/versions/: 001_initial_migration.py  002_add_license_keys.py
frontend/: .dockerignore  Dockerfile  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/auth/callback/: route.ts
frontend/app/api/license/validate/: route.ts
frontend/app/api/notion/search/: route.ts
frontend/app/api/upload/: route.ts
frontend/app/api/user/info/: route.ts
frontend/app/api/user/page-id/: route.ts
frontend/components/: AccessCodePrompt.tsx  CameraCapture.tsx  LicenseKeyPrompt.tsx  NotionLoginPrompt.tsx  PageIdSetup.tsx  RefreshHandler.tsx
frontend/contexts/: AuthContext.tsx
frontend/hooks/: useAuth.ts
frontend/lib/: auth.ts
frontend/public/: manifest.json  sw.js
src/Notes2Notion/: base_prompt.txt  main.py  mock_components.py  notes_builder.py  settings.py  tooling.py  utils.py
tests/: test_tooling.py
